2022-02-19 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/device/lib/mos6502/Makefile.in,
	  sdcc/device/lib/mos6502/__sdcc_indirect_jsr.s,
	  sdcc/device/lib/mos6502-stack-auto/Makefile.in,
	  sdcc/device/lib/mos6502-stack-auto/__sdcc_indirect_jsr.s,
	  sdcc/src/mos6502/gen.c:
	  Add runtime support for indirect jsr.
	* sdcc/src/mos6502/peeph.def:
	  Refactored rules and improved asm inline comments.	

2022-02-19 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/devicel/lib/mos6502/crt0.s:
	  Remove incorrect loading of the second memset parameter.
  	* sdcc/support/regression/ports/u6502/spec.mk:
	  Remove redundant --out-fmt-ihx parameter.
  	* sdcc/device/lib/mos6502-stack-auto/Makefile.in,
  	  sdcc/device/lib/mos6502-stack-auto/crt0.s,
  	  sdcc/device/lib/mos6502-stack-auto/atomic_flasg_test_and_set.c,
  	  sdcc/device/lib/mos6502-stack-auto/_setjmp.c,
  	  sdcc/device/lib/mos6502-stack-auto/_rrulonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_rrslonglong.c,
  	  sdcc/device/lib/mos6502-stack-auto/_ret.c,
  	  sdcc/device/lib/mos6502-stack-auto/,
  	  sdcc/device/lib/Makefile.in,
  	  sdcc/device/lib/clean.mk,
  	  sdcc/configure.ac,
  	  sdcc/configure.ac:  	  
 	  Add mos6502 stack auto target.
  	* sdcc/src/mos6502/main.c:
	  Correct flags affected by cld.
	  
2022-02-19 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/sm83/memcpy.s,
	  device/lib/_memset.c:
	  Switch to GBDK-2020's algorithm with partial loop unrolling.
	* device/lib/_memmove.c:
	  On sm83 call memcpy where possible.

2022-02-15 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug #3322.
	* support/regression/tests/bug-3320.c:
	  Test for bug #3320.

2022-02-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (gatherImplicitVariables): fix bug #3320

2022-02-16 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/isspace.c,
	  device/lib/isxdigit.c: